[tool.poetry]
name = "wordle-solver"
version = "0.1.0"
description = "This is a helper tool for solving the Wordle game: https://www.powerlanguage.co.uk/wordle/"
authors = ["Malek Assi <malekassi2212@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
